# src/backend/src/routes/authen.route.ts
@@ -1,7 +1,9 @@
 import { Router } from "express";
 import { AuthenController } from "../controllers";
+import { validateData } from "../middleware/validation.middleware";
+import { loginSchema } from "../validations/auth.validation";
 
 export const authRouter = Router();
 const authController = new AuthenController();
-authRouter.post("/login", authController.login);
+authRouter.post("/login", validateData(loginSchema), authController.login);
 authRouter.post("/register", authController.register);
